# dolar-scrapper

./: Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
pycurrencies/: main.py
